--- a/frontend/src/responsible/teste.html
+++ b/frontend/src/responsible/teste.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=5; IE=8; IE=7; IE=9; IE=10; IE=11">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,  user-scalable=0, maximum-scale=1">
     <title>Bins</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/schedule-teacher.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-    <!-- <script type="module" src="teste.js" defer></script> -->
+    <script type="module" src="teste.js" defer></script>
     <!-- <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -56,6 +57,29 @@
             cursor: pointer;
         }
     </style> -->
+
+    <style>
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            padding-top: 50px;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgb(0, 0, 0);
+            background-color: rgba(0, 0, 0, 0.9);
+        }
+
+        .modal-content {
+            margin: auto;
+            display: block;
+            width: 80%;
+            max-width: 700px;
+        }
+    </style>
 </head>
 
 <body>
@@ -91,17 +115,21 @@
             </div>
         </div>
     </nav>
-    
-    <div class="d-flex flex-direction-row m-5 flex-wrap justify-content-center gap-4">
-            <img class="foto shadow bg-body-tertiary rounded"  src="../../../backend/uploads/picture-1707351751683-246327963-Captura de tela 2024-02-07 212151.png"
-                alt="Foto da turma" width="300" height="300">
-            <img class="foto shadow bg-body-tertiary rounded" src="../../../backend/uploads/picture-1707351751683-246327963-Captura de tela 2024-02-07 212151.png"
-                alt="Cinque Terre" width="300" height="300">
 
+    <div class="d-flex flex-direction-row m-5 flex-wrap justify-content-center gap-4" id="box">
+        <!-- <img class="foto shadow bg-body-tertiary rounded"
+            src="../../../backend/uploads/picture-1707351751683-246327963-Captura de tela 2024-02-07 212151.png"
+            alt="Foto da turma" width="300" height="300">
 
-  
+        <img class="foto shadow bg-body-tertiary rounded"
+            src="../../../backend/uploads/picture-1707351751683-246327963-Captura de tela 2024-02-07 212151.png"
+            alt="Cinque Terre" width="300" height="300"> -->
     </div>
-
+    <div id="myModal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="modalImage">
+        <div id="caption" class="d-flex justify-content-center"></div>
+    </div>
     <!-- <img src="../../../backend/uploads/picture-1706910817225-498935461-gomes.jpg" alt=""> -->
 
     <!-- <h1>Grafico Linhas</h1>
