--- a/frontend/src/pages/guardian/gallery-guardian.html
+++ b/frontend/src/pages/guardian/gallery-guardian.html
@@ -10,8 +10,30 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="/frontend/src/styles/login-page-style-guardian.css">
-    <script type="module" src="../../../build/pages/guardian/login.js" defer></script>
+    <script type="module" src="../../../build/pages/guardian/gallery-guardian.js" defer></script>
     <title>Login</title>
+    <style>
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            padding-top: 50px;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgb(0, 0, 0);
+            background-color: rgba(0, 0, 0, 0.9);
+        }
+
+        .modal-content {
+            margin: auto;
+            display: block;
+            width: 80%;
+            max-width: 700px;
+        }
+    </style>
 </head>
 <header>
     <img class="header-logo" src="/frontend/assets/logo-icon-horizontal-pink.svg" alt="Logo Pequeno Vínculo">
@@ -19,6 +41,7 @@
 
 <body>
     <main class="">
+        <div class="d-flex flex-direction-row m-5 flex-wrap justify-content-center gap-4" id="box"></div>
         <div id="myModal" class="modal">
             <span class="close">&times;</span>
             <img class="modal-content" id="modalImage">
