--- a/frontend/src/pages/teacher/schedule-teacher.html
+++ b/frontend/src/pages/teacher/schedule-teacher.html
@@ -48,12 +48,12 @@
                 </ul>
             </div>
                 <div id="user-pic" class="user-pic">
-                    <img src="/frontend/assets/profile-userLogin-green.svg" width="50px" height="50px">
-                    <img src="/frontend/assets/down-icon.svg" width="35px" height="35px">
+                    <img src="/frontend/assets/profile-userLogin-green.svg" width="38px" height="38px">
+                    <img src="/frontend/assets/down-icon.svg" width="30px" height="30px">
                 </div>
                 <div class="sub-menu-wrap" id="sub-menu">
                     <div class="sub-menu">
-                        <a href="#" class="sub-menu-link">
+                        <a href="/frontend/src/pages/initial-login.html" class="sub-menu-link">
                             <img src="/frontend/assets/logout-green.svg" width="30px" height="30px">
                             <p>Sair</p>
                             <span></span>
