--- a/frontend/src/pages/student/dashboard-student.html
+++ b/frontend/src/pages/student/dashboard-student.html
@@ -8,8 +8,6 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <!-- <link rel="stylesheet" href="/frontend/src/styles/dashboard-guardian.css"> -->
-    <!-- <script type="module" src="../../../build/pages/guardian/dashboard.js" defer></script> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -30,7 +28,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="dashboard-guardian.html">Home</a>
                     </li>
@@ -41,23 +39,31 @@
                         <a class="nav-link" href="schedule-guardian.html">Agenda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Galeria</a>
+                        <a class="nav-link" href="gallery-guardian.html" aria-disabled="true">Galeria</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" aria-disabled="true">Chat</a>
+                    </li>
+                    <li class="nav-item" id="dropdown-logout"> <!--esther-->
+                        <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                <span class="material-symbols-outlined">person</span>
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                <li><a class="dropdown-item" href="#">Sair</a></li>
+                            </ul>
+                        </div>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <main class="container-fluid">
-        <div class="row">
-            <div id="student-info" class="col-lg-3 p-3 bg-purple rounded-3">
-                <!-- <h2>Guilherme Pires Viana</h2>
-            <p>turma : 2</p>
-            <p>filho de : blabla</p> -->
-            </div>
-            <div id="dashboard" class="col-lg-9 d-flex flex-column border bg-green rounded-3 p-3">
+
+    <main>
+        <div class="student-dash">
+            <div id="student-info"></div>
+            <div id="dashboard">
             </div>
         </div>
     </main>
