--- a/frontend/src/pages/guardian/dashboard-guardian.html
+++ b/frontend/src/pages/guardian/dashboard-guardian.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="/frontend/src/styles/dashboard-guardian.css">
+    <link rel="stylesheet" href="/frontend/src/styles/calendar.css">
     <script type="module" src="../../../build/pages/guardian/dashboard.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -85,7 +86,76 @@
                 <div id="bests"></div>
             </div>
             <div class="last-info-calendar">
-                <h5>Calendário</h5>
+                <h5 id="month"></h5>
+                <table class="calendar">
+                    <thead class="days-week">
+                        <tr>
+                            <th>D</th>
+                            <th>S</th>
+                            <th>T</th>
+                            <th>Q</th>
+                            <th>Q</th>
+                            <th>S</th>
+                            <th>S</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><a id = "day-0/0" ></a></td>
+                            <td><a id = "day-0/1" ></a></td>
+                            <td><a id = "day-0/2" ></a></td>
+                            <td><a id = "day-0/3" ></a></td>
+                            <td><a id = "day-0/4" ></a></td>
+                            <td><a id = "day-0/5" ></a></td>
+                            <td><a id = "day-0/6" ></a></td>
+                        </tr>
+                        <tr>
+                            <td><a id = "day-1/0" ></a></td>
+                            <td><a id = "day-1/1" ></a></td>
+                            <td><a id = "day-1/2" ></a></td>
+                            <td><a id = "day-1/3" ></a></td>
+                            <td><a id = "day-1/4" ></a></td>
+                            <td><a id = "day-1/5" ></a></td>
+                            <td><a id = "day-1/6" ></a></td>
+                        </tr>
+                        <tr>
+                            <td><a id = "day-2/0" ></a></td>
+                            <td><a id = "day-2/1" ></a></td>
+                            <td><a id = "day-2/2" ></a></td>
+                            <td><a id = "day-2/3" ></a></td>
+                            <td><a id = "day-2/4" ></a></td>
+                            <td><a id = "day-2/5" ></a></td>
+                            <td><a id = "day-2/6" ></a></td>
+                        </tr>
+                        <tr>
+                            <td><a id = "day-3/0" ></a></td>
+                            <td><a id = "day-3/1" ></a></td>
+                            <td><a id = "day-3/2" ></a></td>
+                            <td><a id = "day-3/3" ></a></td>
+                            <td><a id = "day-3/4" ></a></td>
+                            <td><a id = "day-3/5" ></a></td>
+                            <td><a id = "day-3/6" ></a></td>
+                        </tr>
+                        <tr>
+                            <td><a id = "day-4/0" ></a></td>
+                            <td><a id = "day-4/1" ></a></td>
+                            <td><a id = "day-4/2" ></a></td>
+                            <td><a id = "day-4/3" ></a></td>
+                            <td><a id = "day-4/4" ></a></td>
+                            <td><a id = "day-4/5" ></a></td>
+                            <td><a id = "day-4/6" ></a></td>
+                        </tr>
+                        <tr>
+                            <td><a id = "day-5/0" ></a></td>
+                            <td><a id = "day-5/1" ></a></td>
+                            <td><a id = "day-5/2" ></a></td>
+                            <td><a id = "day-5/3" ></a></td>
+                            <td><a id = "day-5/4" ></a></td>
+                            <td><a id = "day-5/5" ></a></td>
+                            <td><a id = "day-5/6" ></a></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </main>
